<resources>
    <string name="app_name">Podcast Downloader</string>
    <string name="title_activity_settings">Settings</string>
    <string name="main_action_desc">Paste the RSS feed URL of the podcast to download:</string>
    <string name="url_to_download">The URL to download</string>
    <string name="start_download">Start download</string>
    <string name="downloading_these_files">Downloading these files:</string>
    <string name="downloading_files_desc">You can track the download progress from the notification panel</string>
    <string name="download_selected_items">Download selected items</string>
    <string name="settings">Settings</string>
    <string name="concurrent_downloads">Concurrent Downloads:</string>
    <string name="concurrent_downloads_desc">Choose how many podcast(s) can be downloaded simultaneously:</string>
    <string name="concurrent_downloads_hint">Concurrent downloads</string>
    <string name="metadata">Metadata:</string>
    <string name="metadata_mp3">Add metadata to MP3 files</string>
    <string name="album_art">Album art:</string>
    <string name="album_art_desc">The album art will always re-encoded to a JPEG. You can customize the maximum width/height and the output quality.</string>
    <string name="max_width">Maximum width</string>
    <string name="max_height">Maximum height</string>
    <string name="jpeg_quality">JPEG quality</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="view_on_github">View on GitHub</string>
    <string name="podcast_info">Getting information about this podcast</string>
    <string name="podcast_info_desc">Please wait. This might take a while.</string>
    <string name="malformedUrl">Error: malformed URL</string>
    <string name="urlIOException">Error: IOException while getting the resource. Make sure the URL exists.</string>
    <string name="invalidXml">Error: Invalid XML fetched from the source.</string>
    <string name="failed_album_art_download">Failed album art downloading for:</string>
    <string name="failed_metadata_add">Failed metadata editing for:</string>
    <string name="failed_json_creation">Failed JSON file creation for:</string>
    <string name="settingsTitle">Settings</string>
    <string name="failed_html_parsing">Error: failed HTML parsing</string>
    <string name="convert_html_description">Convert HTML strings for description</string>
    <string name="use_suggested_track_number">Use the track number provided in the RSS feed when available</string>
    <string name="no_track">Don\'t add track number</string>
    <string name="add_latest_track_number">Add the track number (the latest podcast is the first one)</string>
    <string name="add_oldest_track_number">Add the track number (the oldest is the first one)</string>
    <string name="podcast_track_number_customize">Customize podcast track number</string>
    <string name="track_number_options">Track number options:</string>
    <string name="save_edits">Save edits</string>
    <string name="start_from">Start from</string>
    <string name="downloader">Downloader</string>
    <string name="suggested_track_not_available">If the suggested track number is not available:</string>
    <string name="update_available">An update is available</string>
    <string name="update_desc">You\'ll be redirected to GitHub to download the latest APK release.</string>
    <string name="update">Update</string>
    <string name="postpone_update">Remind me later</string>
    <string name="skip_update">Skip this version</string>
    <string name="failed_file_fetching">Failed getting the file URI for:</string>
    <string name="file_mediaprovider_error">The file might have been downloaded, but it wasn\'t possible to add metadata and to scan it.</string>
    <string name="toggle_everything">Toggle everything</string>
    <string name="selected_everything">All the episodes have been selected</string>
    <string name="selected_nothing">Cleared selection of all episodes</string>
    <string name="downloading_podcasts">Downloading podcasts…</string>
    <string name="downloading_podcasts_desc">This notification will disappear when the operation will end</string>
    <string name="download">Download</string>
    <string name="failed_xml_writing">Failed XML writing in the PodcastDownloader folder. This won\'t impact podcast downloading.</string>
    <string name="downloads_settings">Downloads:</string>
    <string name="save_xml_file">Save the XML file in the PodcastDownloader directory</string>
    <string name="select_not_downloaded_items">Select not downloaded episodes</string>
    <string name="download_new_episodes">Download the new episodes</string>
    <string name="download_new_episodes_desc">All the new episodes from the sources you\'ve stored will be downloaded.</string>
    <string name="break_at_first">Stop downloading episodes at the first already-downloaded file</string>
    <string name="stop_filename">Stop when a file with the same name is found</string>
    <string name="stop_urlstorage">Stop when the same URL has already been downloaded</string>
    <string name="sources">Sources:</string>
    <string name="remove">Remove</string>
    <string name="delete_url_history">Delete URL history</string>
    <string name="export_url_history">Export URL history</string>
    <string name="failed_url_export">An error occurred while exporting the URL list</string>
    <string name="sources_desc">Every RSS feed downloaded with PodcastDownloader is added as a RSS source. Click on each URL to fetch the podcast title, or to the \"X\" to delete them. Finally, you can also export the URL history (or delete it).</string>
    <string name="open_source_rss">Open RSS source</string>
    <string name="keep_indentation">Keep indentation of the XML file</string>
    <string name="keep_line_break">Keep the line break, even if the XML indentation shouldn\'t be kept</string>
    <string name="history_written">Written history file in PodcastDownloader directory</string>
    <string name="source_url">The source URL</string>
    <string name="add">Add</string>
    <string name="automatically_save_url">Automatically save the feed URL</string>
    <string name="delete">Delete</string>
    <string name="import_url_history">Import URL history</string>
    <string name="postProcessingNotification">Post-processing file. This shouldn\'t take long.</string>
    <string name="downloaded">Downloaded:</string>
    <string name="downloadFailed">Download failed</string>
    <string name="episode_title">Episode title</string>
    <string name="show_title">Show title</string>
    <string name="podcast_author">Podcast author</string>
    <string name="podcast_description">Podcast description</string>
    <string name="episode_number">Episode number</string>
    <string name="published_date">Published date</string>
    <string name="licenses">Licenses:</string>
    <string name="customUserAgent">Custom User Agent (none if blank)</string>
    <string name="user_agent_description">If you want, you can customize the User Agent that is sent when fetching both the XML and the MP3 files. If you don\'t know what this is, leave it blank.</string>
    <string name="keep_track_downloader_settings">When automatically downloading new podcasts, use the podcast track number settings that have been used for the last download of that podcast instead of the generic ones.</string>
    <string name="change_downloads_folder">Change download folder</string>
    <string name="create_show_dir">Create a subdirectory for each show</string>
    <string name="save_json_file">Save a JSON file with all the metadata fetched of each downloaded episode</string>
    <string name="failed_file_copy">Failed file copy to external storage. This episode won\'t be saved on the device.</string>
    <string name="pick_dir_prompt">Please pick the default output directory</string>
    <string name="empty_cache">Empty cache</string>
    <string name="show_fetched_items_before_downloading">Show the fetched podcasts episodes before downloading</string>
    <string name="files_downloaded">All the podcasts have been downloaded.</string>
    <string name="fetching_data">Fetching new podcasts. This might take a while.</string>
    <string name="fetched_data">All the new podcast episodes have been enqueued.</string>
    <string name="title_activity_main_downloader" translatable="false">MainDownloader</string>
    <string name="search">Search</string>
    <string name="search_btn">Search button</string>
    <string name="write_podcast_name">Write the podcast name</string>
    <string name="itunes_fetched_results">Results will be fetched from iTunes. Click on the search button on the bottom-left part of the screen to search (or to refresh the results).</string>
    <string name="search_error">An error occurred while fetching data from iTunes API.</string>
    <string name="fetching_search">Fetching podcasts shows. This might take a while.</string>
    <string name="download_specific_file_str">The \"%s\" episode (%s) of the \"%s\" show has been downloaded.</string>
    <string name="download_generic_file_str">The \"%s\" file has been downloaded.</string>
    <string name="file_downloaded">File downloaded</string>
    <string name="notifications">Notifications:</string>
    <string name="notifications_at_end">Send a notification after all files have been downloaded</string>
    <string name="notifications_after_single_file">Send a notification after a file has been downloaded</string>
    <string name="notifications_while_downloading">Send a silent notification displaying the download process. It\'s recommended to keep this switch on</string>
    <string name="export_source_list">Export source list</string>
    <string name="import_source_list">Import source list</string>
    <string name="keep_screen_on">Keep the screen on while the application is opened</string>
    <string name="application_theme">Application theme:</string>
    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>
    <string name="follow_system">Follow system settings</string>
    <string name="application_theme_desc">Click on the following buttons to change the application theme.</string>

</resources>