<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15sp">

        <TextView
            android:id="@+id/textView12"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_new_episodes" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_new_episodes_desc" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/breakAtFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/break_at_first" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/showItemsToDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Show the fetched items before downloading" />

        <Button
            android:id="@+id/stopFileName"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:text="@string/stop_filename" />

        <Button
            android:id="@+id/stopUrl"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:text="@string/stop_urlstorage" />
    </LinearLayout>
</ScrollView>