<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    style="@style/Base.Theme.PodcastDownloader"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/showInfoDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:collapsedTitleTextAppearance="@style/SmallerTitle"
            app:contentScrim="@android:color/transparent"
            app:expandedTitleMarginBottom="16dp"
            app:expandedTitleMarginStart="16dp"
            app:expandedTitleTextAppearance="@style/MainTitle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15sp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                style="@style/TextAppearance.Material3.HeadlineMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/concurrent_downloads" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/concurrent_downloads_desc" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/concurrentDownloads"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/concurrent_downloads_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView5"
                style="@style/TextAppearance.Material3.HeadlineMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/metadata" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/mp3Metadata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/metadata_mp3"
                android:textSize="16sp"></com.google.android.material.materialswitch.MaterialSwitch>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/htmlParsing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/convert_html_description"
                android:textSize="16sp"></com.google.android.material.materialswitch.MaterialSwitch>

            <Button
                android:id="@+id/podcastTrackNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/podcast_track_number_customize" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextAppearance.Material3.HeadlineSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/album_art" />

            <TextView
                android:id="@+id/textView6"
                style="@style/MaterialAlertDialog.Material3.Body.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/album_art_desc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5sp"
                    android:layout_marginRight="5sp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/maxAlbumWidth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/max_width"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/maxAlbumHeight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/max_height"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/jpegQuality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/jpeg_quality"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/openSource"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5sp"
                    android:layout_marginRight="5sp"
                    android:layout_weight="1"
                    android:text="@string/open_source_licenses" />

                <Button
                    android:id="@+id/github"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="1"
                    android:text="@string/view_on_github" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>